Bug : Les messages d'administration sont visibles avec le thème AERO.
git-svn-id: svn://svn.code.sf.net/p/mediboard/code/trunk@27107 a21d6be2-e512-0410-a060-91f5a2946631

--- a/style/aero-blue/main.css
+++ b/style/aero-blue/main.css
@@ -28,6 +28,10 @@ table#main {
   padding-top:32px;
 }
 
+table#main.dialog {
+  padding-top:0;
+}
+
 /* dropdown menu */
 #main.dialog .tabox {
   padding-top: 0;
